gen/26.1/rpk/rpk-shadow-describe.adoc
= rpk shadow describe
:description: rpk shadow describe

Describe a Redpanda Shadow Link.

This command shows the Shadow Link configuration, including connection settings,
synchronization options, and filters. Use the flags to display specific sections
or all sections of the configuration.

By default, the command displays the overview and client configuration sections.
Use the flags to display additional sections such as topic synchronization,
consumer offset synchronization, and security synchronization settings.

For Redpanda Cloud, rpk will use the Redpanda ID of the cluster you are 
currently logged into. If you wish to use a different one either login and 
create a profile for it, or use the --redpanda-id flag to specify it directly.

Using the --format flag with JSON or YAML will output the full configuration in 
the specified format, ignoring section flags.

== Usage

[,bash]
----
rpk shadow describe [LINK_NAME] [flags]

Examples:

Describe a Shadow Link with default sections (overview and client):
  rpk shadow describe my-shadow-link

Display all configuration sections:
  rpk shadow describe my-shadow-link --print-all

Display specific sections:
  rpk shadow describe my-shadow-link --print-overview --print-topic

Display only the client configuration:
  rpk shadow describe my-shadow-link -c

Display output as JSON:
  rpk shadow describe my-shadow-link --format json
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|-h, --help |- |Help for describe.

|-a, --print-all |- |Print all sections.

|-c, --print-client |- |Print the client configuration section.

|-r, --print-consumer |- |Print the detailed consumer offset configuration section.

|-o, --print-overview |- |Print the overview section.

|-y, --print-registry |- |Print the detailed schema registry configuration section.

|-s, --print-security |- |Print the detailed security configuration section.

|-t, --print-topic |- |Print the detailed topic configuration section.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===